Changelog
=========

7.0-dev - (unreleased)
----------------------

6.9 - (2014-01-22)
------------------
* Bug fix: EffectiveDate is no longer set to now() on publish
  [ghicaale refs #9110]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

6.8 - (2013-12-10)
------------------
* Bug fix: Add missing dependency to ATVocabularyManager
  [avoinea]
* Change: make archived portal message more visible by
  using attentionMessage icon
  [demarant]
* Change: trying usage of queryAdapter for pylint validation
  [simiamih #17382]
* Feature: updated .gitignore
  [ghicaale]

6.7 - (2013-11-20)
------------------
* Feature: include option to archive/unarchive all subobjects/content
  of folderish object
  [simiamih #17382]

6.6 - (2013-11-06)
------------------
* Bug fix: also define get_base in archive_dialog.js as publish_dialog.js is
  not always loaded
  [tiberich #17303]
* Bug fix: allow unarchiving, the reverse of the archiving operation
  [tiberich #17302]
* Bug fix: refactor the way the workflow menu is constructed when adding the
  Archive/Unarchive actions
  [tiberich #17374]

6.5 - (2013-10-22)
------------------
* Bug fix: Always show the Archive action in the workflow state menu, even
  if the workflow is simplified and the Advanced page doesn't appear
  [tiberich #9327]
* Bug fix: added documentation for the publish dialog; only enable the publish
  dialog for Assessments and Specifications
  [tiberich #17221]

6.4 - (2013-10-04)
------------------
* Bug fix: fix label in viewlet
  [tiberich #9327]

6.3 - (2013-10-04)
------------------
* Change: fixed pylint and jslint warnings
  [tiberich #16960]

6.2 - (2013-10-04)
------------------
* Feature: it is now possible to mark content as archived. Details about the
  archival reasons are added through a popup dialog.
  [tiberich #9327]

6.1 - (2013-09-23)
------------------
* Bug fix: fix security problem with Plone 4.3
  [tiberich #16698]

6.0 - (2013-09-06)